--- a/style.css
+++ b/style.css
@@ -1,49 +1,66 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: black;
   color: white;
   font-family: Helvetica, sans-serif;
 }
 
 main {
+  background-color: black;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-#result {
+.display {
+  display: flex;
+  justify-content: end;
   font-size: 70px;
-  margin-left: 268px;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
+  margin-right: 10px;
 }
+
 .btn {
+  cursor: pointer;
   border: none;
-  border-radius: 35px;
-  font-size: 35px;
-  margin: 5px;
-  height: 70px;
-  width: 70px;
+  border-radius: 42.5px;
+  font-size: 40px;
+  margin: 7px;
+  height: 85px;
+  width: 85px;
+  transition: 0.25s;
 }
 
 .btn_number {
-  background-color: #707070;
+  background-color: rgba(112, 112, 112, 0.35);
 }
 
 .btn_operator {
-  background-color: #ff9f0a;
+  background-color: rgba(255, 159, 10, 0.85);
 }
 
 .btn_function {
-  background-color: #c0c0c0;
+  background-color: rgba(192, 192, 192, 0.7);
   color: black;
 }
 
+.btn_number:hover {
+  background-color: rgba(112, 112, 112, 1);
+}
+
+.btn_operator:hover {
+  background-color: rgba(255, 179, 30, 1);
+}
+
+.btn_function:hover {
+  background-color: rgba(200, 200, 200, 1);
+}
+
 .colspan {
-  width: 152px;
-  border-radius: 35px;
-  padding-right: 80px;
+  width: 184px;
+  border-radius: 42.5px;
+  padding-right: 95px;
 }
 
 #x {
